# boost_graph_sandbox

./: CMakeLists.txt  conanfile.py
colored_subgraph_matching/: CMakeLists.txt  colored_graph.cpp  colored_graph.h  colored_graph_subgraph_matching.cpp  colored_graph_subgraph_matching.h  colored_graph_unit_testing.cpp  colored_subgraph_matcher_main.cpp  graph_isomorph_with_property_map.cpp
kevin_bacon_example/: CMakeLists.txt  kevin_bacon_main.cpp
